--- a/MeatyApp/Supports/Base.lproj/Main.storyboard
+++ b/MeatyApp/Supports/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53d-CE-IbZ">
                                 <rect key="frame" x="49" y="393" width="316" height="36"/>
@@ -173,7 +173,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m1E-TN-9Ng">
                                 <rect key="frame" x="45" y="286" width="324" height="1"/>
@@ -238,22 +238,105 @@
             </objects>
             <point key="canvasLocation" x="634.78260869565224" y="129.61956521739131"/>
         </scene>
-        <!--View Controller-->
+        <!--Contacts View Controller-->
         <scene sceneID="L0c-6Y-zdo">
             <objects>
-                <viewController id="pkf-nN-NaA" sceneMemberID="viewController">
+                <viewController id="pkf-nN-NaA" customClass="ContactsViewController" customModule="MeatyApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="58X-eG-XXM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mXS-a5-EYu">
+                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="4Sa-ua-epa"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem id="iUS-qv-iw4"/>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meaty" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oui-bh-jJB">
+                                <rect key="frame" x="8" y="28" width="65" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="5ZW-HJ-7DK"/>
+                                    <constraint firstAttribute="width" constant="65" id="iLO-qa-bWc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="textColor" red="0.21831114579999999" green="0.38538020039999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="search-512" translatesAutoresizingMaskIntoConstraints="NO" id="6Aw-jO-1si">
+                                <rect key="frame" x="376" y="27" width="29" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="29" id="jft-AC-ijd"/>
+                                    <constraint firstAttribute="height" constant="29" id="rNM-dA-djc"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hIJ-PB-iUw">
+                                <rect key="frame" x="0.0" y="228" width="414" height="459"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="zA4-gy-wvh" customClass="ContactsTableViewCell" customModule="MeatyApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zA4-gy-wvh" id="B5J-Do-uMU">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="pkf-nN-NaA" id="W9r-0m-1bu"/>
+                                    <outlet property="delegate" destination="pkf-nN-NaA" id="hsf-ne-Wbj"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xHN-9y-s1T">
+                                <rect key="frame" x="0.0" y="64" width="414" height="164"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vy1-n5-mDc">
+                                        <rect key="frame" x="8" y="25" width="87" height="66"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUR-kM-xpv">
+                                        <rect key="frame" x="118" y="48" width="42" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="mXS-a5-EYu" secondAttribute="trailing" id="0Es-4e-wjP"/>
+                            <constraint firstItem="xHN-9y-s1T" firstAttribute="leading" secondItem="teM-IX-TK3" secondAttribute="leading" id="1C2-Ei-r9z"/>
+                            <constraint firstItem="Oui-bh-jJB" firstAttribute="top" secondItem="teM-IX-TK3" secondAttribute="top" constant="8" id="2Lh-iu-ITs"/>
+                            <constraint firstItem="hIJ-PB-iUw" firstAttribute="bottom" secondItem="teM-IX-TK3" secondAttribute="bottom" id="47W-EC-t7c"/>
+                            <constraint firstItem="mXS-a5-EYu" firstAttribute="top" secondItem="teM-IX-TK3" secondAttribute="top" id="79d-rG-dE3"/>
+                            <constraint firstItem="6Aw-jO-1si" firstAttribute="top" secondItem="teM-IX-TK3" secondAttribute="top" constant="7" id="FJm-MQ-wSD"/>
+                            <constraint firstItem="xHN-9y-s1T" firstAttribute="top" secondItem="mXS-a5-EYu" secondAttribute="bottom" id="Rek-MW-4PM"/>
+                            <constraint firstItem="xHN-9y-s1T" firstAttribute="trailing" secondItem="teM-IX-TK3" secondAttribute="trailing" id="d0s-tt-Gky"/>
+                            <constraint firstItem="hIJ-PB-iUw" firstAttribute="leading" secondItem="teM-IX-TK3" secondAttribute="leading" id="dhx-oL-LPt"/>
+                            <constraint firstItem="mXS-a5-EYu" firstAttribute="leading" secondItem="teM-IX-TK3" secondAttribute="leading" id="eJZ-hY-Oym"/>
+                            <constraint firstItem="hIJ-PB-iUw" firstAttribute="top" secondItem="xHN-9y-s1T" secondAttribute="bottom" id="eQl-VR-BtP"/>
+                            <constraint firstItem="hIJ-PB-iUw" firstAttribute="trailing" secondItem="teM-IX-TK3" secondAttribute="trailing" id="hKY-tT-kwS"/>
+                            <constraint firstItem="teM-IX-TK3" firstAttribute="trailing" secondItem="6Aw-jO-1si" secondAttribute="trailing" constant="9" id="jLQ-Nj-HDh"/>
+                            <constraint firstItem="hIJ-PB-iUw" firstAttribute="top" secondItem="mXS-a5-EYu" secondAttribute="bottom" constant="164" id="oDV-30-JO4"/>
+                            <constraint firstItem="Oui-bh-jJB" firstAttribute="leading" secondItem="teM-IX-TK3" secondAttribute="leading" constant="8" id="zAM-Ib-uOo"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="teM-IX-TK3"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="contacts" id="3Y6-EM-o9s"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="contactstableview" destination="hIJ-PB-iUw" id="pXN-iA-Syn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J58-Mp-zkf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2364" y="636"/>
+            <point key="canvasLocation" x="2362.3188405797105" y="635.86956521739137"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="zbT-jM-5om">
@@ -322,12 +405,6 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i8S-7E-giX">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="249"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="249" id="dsA-rK-0my"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iPp-Xy-fvu">
                                                     <rect key="frame" x="8" y="259" width="398" height="24"/>
                                                     <constraints>
@@ -337,6 +414,12 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i8S-7E-giX">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="249"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="249" id="dsA-rK-0my"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                         </view>
                                         <constraints>
